--- a/blog-detail.html
+++ b/blog-detail.html
@@ -64,7 +64,7 @@
       <!--== Start Header Navigation ==-->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="tr-icon ion-android-menu"></i> </button>
-        <div class="logo"> <a href="index.html"> <img class="logo logo-display" src="/assets/images/cropped-SP-logo-01.png" alt=""> <img class="logo logo-scrolled" src="/assets/images/cropped-SP-logo-01.png" alt=""> </a> </div>
+        <div class="logo"> <a href="index.html"> <img class="logo logo-display" src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled" src="/assets/images/skittles_logo.webp" alt=""> </a> </div>
       </div>
       <!--== End Header Navigation ==-->
 
@@ -333,9 +333,7 @@
         <div class="col-sm-6 col-md-3">
           <div class="widget widget-text">
             <h5 class="widget-title">Working Hours</h5>
-            <p>Our support available to help you 24 hours a day, seven days a week.</p>
-            <p><strong>Monday to Friday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
-            <p><strong>Saturday to Sunday</strong> – <span class="gradient-color">9AM – 1PM</span></p>
+            <p><strong>Monday to Saturday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
           </div>
         </div>
       </div>
