--- a/events-marketing-videos.html
+++ b/events-marketing-videos.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/cropped-SP-logo-01.png" alt=""> <img
-                class="logo logo-scrolled" src="/assets/images/cropped-SP-logo-01.png" alt="">
+                src="/assets/images/skittles_logo.webp" alt=""> <img
+                class="logo logo-scrolled" src="/assets/images/skittles_logo.webp" alt="">
             </a> </div>
         </div>
         <!--== End Header Navigation ==-->
@@ -129,7 +129,7 @@
       <div class="container">
         <h2 class="mt-0 text-center font-700">Creative Video Production Company</h2>
         <hr class="center_line gradient-bg-6">
-        <div class="row">
+        <div class="row cmn_flex_box">
 
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
@@ -168,7 +168,7 @@
       <div class="container">
         <h2 class="mt-0 text-center font-700">We create Creative Marketing Videos</h2>
         <hr class="center_line gradient-bg-6">
-        <div class="row">
+        <div class="row cmn_flex_box">
 
 
           <div class="col-lg-6 col-md-6 col-xs-12 ">
@@ -276,9 +276,7 @@
             <div class="col-sm-6 col-md-3">
               <div class="widget widget-text">
                 <h5 class="widget-title">Working Hours</h5>
-                <p>Our support available to help you 24 hours a day, seven days a week.</p>
-                <p><strong>Monday to Friday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
-                <p><strong>Saturday to Sunday</strong> – <span class="gradient-color">9AM – 1PM</span></p>
+              <p><strong>Monday to Saturday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
               </div>
             </div>
           </div>
