--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,6 @@
           <ul class="social-media-dark social-top">
             <li><a href="https://www.facebook.com/Skittles-Productions-228382107723533/"
                 class="icofont icofont-social-facebook"></a></li>
-            <li><a href="https://twitter.com/skittles_prod" class="icofont icofont-social-twitter"></a></li>
             <li><a href="https://www.instagram.com/skittlesproductions/?hl=en"
                 class="icofont icofont-social-instagram"></a></li>
             <li><a href="https://www.linkedin.com/company/skittles-productions/"
@@ -86,11 +85,11 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
-                <li><a href="service.html">Corporate Video</a></li>
-                <li><a href="service.html">TV Commercial</a></li>
-                <li><a href="service.html">Animated Explainer Video</a></li>
-                <li><a href="service.html">Short Film</a></li>
-                <li><a href="service.html">Events Marketing Videos</a></li>
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
+                <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
+                <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
 
               </ul>
             </li>
@@ -118,6 +117,19 @@
         </div>
       </section>
     </div>
+    <section class="white-bg pb-0 transition-none pt-120">
+      <div class="container-fluid">
+        <div class="row">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.3955773669295!2d77.2175057749529!3d28.52782738882875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2206035aba9%3A0xea5a2c1eb7d48a56!2sSkittles%20Productions%20-%20Video%20Production%20Company%20and%20Corporate%20Film%20Makers%20in%20Delhi!5e0!3m2!1sen!2sin!4v1702272379775!5m2!1sen!2sin"
+            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
+    <!-- <section> -->
+
+    <!-- </section> -->
 
     <!--== Contact Form Start ==-->
     <section class="white-bg">
@@ -186,11 +198,12 @@
         <div class="row mt-50">
           <div class="col-md-12 col-sm-10 col-xs-10 centerize-col text-center social-icons-style-04">
             <ul class="lg-icon">
+              <li><a href="https://www.instagram.com/skittlesproductions/?hl=en"
+                  class="icofont icofont-social-instagram"></a></li>
               <li><a class="facebook" href="#."><i class="icofont icofont-social-facebook"></i></a></li>
-              <li><a class="twitter" href="#."><i class="icofont icofont-social-twitter"></i></a></li>
-              <li><a class="behance" href="#."><i class="icofont icofont-social-behance"></i></a></li>
               <li><a class="linkedin" href="#."><i class="icofont icofont-social-linkedin"></i></a></li>
               <li><a class="youtube" href="#."><i class="icofont icofont-social-youtube"></i></a></li>
+              <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
             </ul>
           </div>
         </div>
@@ -209,7 +222,8 @@
                 <h4 class="font-700">Contact Address</h4>
               </div>
               <div class="hidden-content">
-                <p> 80/65 A, basement, Malviya Nagar,<br> New Delhi, Delhi 110017</p>
+                <p>Skittles Productions Pvt. Ltd., Salcon Rasvilas, D-1, Saket District Centre,<br> Saket, New Delhi-
+                  110017</p>
               </div>
             </div>
           </div>
@@ -239,6 +253,7 @@
         </div>
       </div>
     </section>
+
     <!--== Contact Info End ==-->
     <!--== Footer Start ==-->
     <footer class="footer" id="footer-fixed">
