--- a/events-marketing-videos.html
+++ b/events-marketing-videos.html
@@ -90,10 +90,10 @@
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
                 <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="tv-commercial.html">TV Commercial</a></li>
-                <li><a href="explainer-video.html">Animated Explainer Video</a></li>
-                <li><a href="short-film.html">Short Film</a></li>
-                <li><a href="events-marketing-videos.html">Events Marketing Videos</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
+                <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
+                <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
 
 
               </ul>
@@ -114,11 +114,11 @@
     <!--== Page Title Start ==-->
     <div class="transition-none">
       <section class="title-hero-bg parallax-effect"
-        style="background-image: url(assets/images/Corporate-video-banner1.jpg);">
+        style="background-image: url(assets/images/eventanner.webp);">
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0">A <span class="play-font font-italic">Corporate Video
+            <h1 class="mt-0">A <span>Corporate Video
               </span> &<br> Film Makers</h1>
           </div>
         </div>
@@ -133,7 +133,7 @@
 
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Homepage-3.jpg" alt="" class="img-responsive">
+              <img src="./assets/images/Event-1.webp" alt="" class="img-responsive">
             </div>
           </div>
           <div class="col-sm-6 pt-40">
@@ -200,7 +200,7 @@
           </div>
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Homepage-2.jpg" alt="" class="img-responsive">
+              <img src="./assets/images/Event-2.webp" alt="" class="img-responsive">
             </div>
           </div>
         </div>
@@ -214,10 +214,10 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
             <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Want
-              You Start a project today!</h2>
+              to start a project today!</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Sign up now</a>
+                data-toggle="modal" data-target="#myModal">Get a quote</a>
             </div>
           </div>
         </div>
@@ -225,7 +225,91 @@
     </section>
     <!--== Call to Actions End ==-->
 
- 
+    <section class="white-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 " data-aos="fade-right" data-aos-duration="1000">
+            <div class="dev_subtitle">
+              <h2 class="mt-0 text-center font-700">FAQs</h2>
+              <hr class="center_line gradient-bg-6">
+            </div>
+
+          </div>
+          <div class="col-sm-12 pt-60">
+            <div class="panel-group accordion-style-01" id="accordion-style">
+              <div class="panel">
+                <div class="panel-heading"> <a data-toggle="collapse" data-parent="#accordion-style" href="#question1"
+                    aria-expanded="false" class="collapsed">
+                    <div class="panel-title">What is TV commercial production? <span class="pull-right"><i
+                          class="ion-android-add"></i></span> </div>
+                  </a> </div>
+                <div id="question1" class="panel-collapse collapse" aria-expanded="false" role="tablist"
+                  style="height: 0px;">
+                  <div class="panel-body"> Communicating with the target audience should include precision and clarity
+                    of thoughts & vision. In the modern times, TV commercial production services are portraying this
+                    role by highlighting features of products and services offered by the business. On the other hand,
+                    there are many types of commercial videos like image video commercial, testimonial style commercial
+                    and comparison commercials which showcase the brand prominence by engaging the users. Besides, these
+                    TV commercials are capable of gaining trust of new and existing users through increased brand
+                    awareness. Influencers are provided script as a part of TV commercial production strategy to promote
+                    business in the positive manner.</div>
+                </div>
+              </div>
+              <div class="panel">
+                <div class="panel-heading"> <a data-toggle="collapse" data-parent="#accordion-style" href="#question2"
+                    aria-expanded="false" class="collapsed">
+                    <div class="panel-title">What do commercial production companies do?<span class="pull-right"><i
+                          class="ion-android-add"></i></span> </div>
+                  </a> </div>
+                <div id="question2" class="panel-collapse collapse" aria-expanded="false" role="tablist"
+                  style="height: 0px;">
+                  <div class="panel-body"> The major role played by commercial production companies is to create brand
+                    awareness about the organization. This action is further intended at compelling audience to take an
+                    audience and communicate with the brand. The creative, unique and thought-provoking scripts are
+                    written by the TV commercial production team according to business promotion objectives of the
+                    clients. In short, keeping in mind, the budget of the client, the TV commercial production services
+                    are planned and executed with utmost perfection. </div>
+                </div>
+              </div>
+              <div class="panel">
+                <div class="panel-heading"> <a data-toggle="collapse" data-parent="#accordion-style" href="#question3"
+                    aria-expanded="false" class="collapsed">
+                    <div class="panel-title">What company makes TV commercials?<span class="pull-right"><i
+                          class="ion-android-add"></i></span> </div>
+                  </a> </div>
+                <div id="question3" class="panel-collapse collapse" aria-expanded="false" role="tablist">
+                  <div class="panel-body"> At Skittles Productions, we offer the best-in-class TV commercial production
+                    services according to the vision and business requirements of our clients. We emphasize on High
+                    Quality video, clarity of thoughts while covering the products or services of the company in the
+                    short duration commercial. As a part of our TV commercials, we highlight the pros of using products
+                    or subscribing to services of the organization further convincing users to explore the brand. We
+                    customize TV commercial strategy at competitive price according to the budget of the client.</div>
+                </div>
+              </div>
+              <div class="panel">
+                <div class="panel-heading"> <a data-toggle="collapse" data-parent="#accordion-style" href="#question4"
+                    aria-expanded="false" class="collapsed">
+                    <div class="panel-title">What makes you the best tv commercial production in Delhi NCR?<span
+                        class="pull-right"><i class="ion-android-add"></i></span> </div>
+                  </a> </div>
+                <div id="question4" class="panel-collapse collapse" aria-expanded="false" role="tablist">
+                  <div class="panel-body">Being the leading and prominent TV commercial production company, Skittles
+                    Productions has actively contributed to the success story of various brands over a decade till date.
+                    We have consistently maintained transparency, cost-effectiveness, tech-savvy solutions along with
+                    the result-driven approach. We believe in catering to business goals of the organization while
+                    advising them to invest on the suitable package of TV commercial production services in a realistic
+                    manner.</div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+    </section>
 
     <!--== Footer Start ==-->
     <footer class="footer" id="footer-fixed">
