--- a/tv-commercial.html
+++ b/tv-commercial.html
@@ -90,12 +90,10 @@
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
                 <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="tv-commercial.html">TV Commercial</a></li>
-                <li><a href="explainer-video.html">Animated Explainer Video</a></li>
-                <li><a href="short-film.html">Short Film</a></li>
-                <li><a href="events-marketing-videos.html">Events Marketing Videos</a></li>
-
-
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
+                <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
+                <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
               </ul>
             </li>
 
@@ -192,10 +190,10 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
             <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Want
-              You Start a project today!</h2>
+              to start a project today!</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Sign up now</a>
+                data-toggle="modal" data-target="#myModal">Get a quote</a>
             </div>
           </div>
         </div>
