--- a/blog-detail.html
+++ b/blog-detail.html
@@ -78,10 +78,10 @@
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
             <ul class="dropdown-menu">
               <li><a href="corporate-video-production.html">Corporate Video</a></li>
-              <li><a href="tv-commercial.html">TV Commercial</a></li>
-              <li><a href="explainer-video.html">Animated Explainer Video</a></li>
-              <li><a href="short-film.html">Short Film</a></li>
-              <li><a href="events-marketing-videos.html">Events Marketing Videos</a></li>
+              <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
+              <li><a href="short-film.html">Campaign Videos</a></li>
+              <li><a href="explainer-video.html">Animated Video</a></li>
+              <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
              
              
             </ul>
