--- a/tv-commercial.html
+++ b/tv-commercial.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img
-                class="logo logo-scrolled" src="/assets/images/skittles_logo.webp" alt="">
+                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.webp" alt="">
             </a> </div>
         </div>
         <!--== End Header Navigation ==-->
@@ -89,11 +89,12 @@
 
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
+                <li><a href="branding.html">Designing & Branding Services</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
@@ -200,48 +201,51 @@
       </div>
     </section>
     <!--== Call to Actions End ==-->
-  <!--== Counter Start ==-->
-  <section class="dark-bg pt-80 pb-80">
-    <div class="container">
-      <div class="text-center">
-      <h2 class="white-color pb-20">What makes us one of the best tv commercial production companies?
-      </h2>
-      <p class="white-color pb-40">Every company has work ethics. Just like you have yours, we have ours which have able to deliver fine projects to our clients.
+    <!--== Counter Start ==-->
+    <section class="dark-bg pt-80 pb-80">
+      <div class="container">
+        <div class="text-center">
+          <h2 class="white-color pb-20">What makes us one of the best tv commercial production companies?
+          </h2>
+          <p class="white-color pb-40">Every company has work ethics. Just like you have yours, we have ours which have
+            able to deliver fine projects to our clients.
 
-      </p>
-    </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-12">
-          <div class="counter-wrap pb-30">
-            <img src="./assets/images/Clients.png" alt="">
-            <!-- <h2 class="y-color font-40px"><i class="icofont icofont-brand-designbump"></i></h2> -->
-            <!-- <h2><span class="counter font-700 white-color">35</span><span class=" font-700 white-color">+</span></h2> -->
-            <h3 class="white-color pb-20 pt-30">Creative</h3>
-            <p class="white-color">Yes, our ideas are creative, quirky, and also problem solving.</p>
-          </div>
+          </p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <div class="counter-wrap pb-30">
-            <!-- <img src="./assets/images/projects.png" alt=""> -->
-            <h2 class="y-color"><i class="icofont icofont-ui-timer"></i></h2>
-            <!-- <h2><span class="counter font-700 white-color">87</span><span class=" font-700 white-color">+</span></h2> -->
-            <h3 class="white-color pb-20 pt-30">Timely Delivery</h3>
-            <p class="white-color">We understand that time is of the essence. This is why we do everything possible in our limits to deliver our client’s projects.</p>
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <div class="counter-wrap pb-30">
+              <img src="./assets/images/Clients.png" alt="">
+              <!-- <h2 class="y-color font-40px"><i class="icofont icofont-brand-designbump"></i></h2> -->
+              <!-- <h2><span class="counter font-700 white-color">35</span><span class=" font-700 white-color">+</span></h2> -->
+              <h3 class="white-color pb-20 pt-30">Creative</h3>
+              <p class="white-color">Yes, our ideas are creative, quirky, and also problem solving.</p>
+            </div>
           </div>
-        </div>
-        <div class="col-md-4 col-sm-12">
-          <div class="counter-wrap pb-30">
-            <!-- <img src="./assets/images/experience.png" alt=""> -->
-            <h2 class="y-color"><i class="icofont icofont-cur-dollar-true"></i></h2>
-            <!-- <h2><span class="counter font-700 white-color">10</span><span class=" font-700 white-color">+</span></h2> -->
-            <h3 class="white-color pb-20 pt-30">Cost-Effective</h3>
-            <p class="white-color">If you don’t like going over the budget, so don’t we. We make the best use of resources at hand to create stellar projects.</p>
+          <div class="col-md-4 col-sm-12">
+            <div class="counter-wrap pb-30">
+              <!-- <img src="./assets/images/projects.png" alt=""> -->
+              <h2 class="y-color"><i class="icofont icofont-ui-timer"></i></h2>
+              <!-- <h2><span class="counter font-700 white-color">87</span><span class=" font-700 white-color">+</span></h2> -->
+              <h3 class="white-color pb-20 pt-30">Timely Delivery</h3>
+              <p class="white-color">We understand that time is of the essence. This is why we do everything possible in
+                our limits to deliver our client’s projects.</p>
+            </div>
           </div>
+          <div class="col-md-4 col-sm-12">
+            <div class="counter-wrap pb-30">
+              <!-- <img src="./assets/images/experience.png" alt=""> -->
+              <h2 class="y-color"><i class="icofont icofont-cur-dollar-true"></i></h2>
+              <!-- <h2><span class="counter font-700 white-color">10</span><span class=" font-700 white-color">+</span></h2> -->
+              <h3 class="white-color pb-20 pt-30">Cost-Effective</h3>
+              <p class="white-color">If you don’t like going over the budget, so don’t we. We make the best use of
+                resources at hand to create stellar projects.</p>
+            </div>
+          </div>
+
         </div>
-        
       </div>
-    </div>
-  </section>
+    </section>
 
     <!--== Call to Actions Start ==-->
     <section class="gradient-bg-6 pt-80 pb-80">
@@ -407,7 +411,7 @@
             <div class="col-sm-6 col-md-3">
               <div class="widget widget-text">
                 <h5 class="widget-title">Working Hours</h5>
-              <p><strong>Monday to Saturday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
+                <p><strong>Monday to Saturday</strong> – <span class="gradient-color">9AM – 6PM</span></p>
               </div>
             </div>
           </div>
